[package]
name = "redditscrp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.40" 
mongodb = "2.1.0"
dotenv = "0.15.0"